# near-token

./: .gitignore  README.md  package-lock.json  package.json
contract/: Cargo.toml  addAccont.sh  build.sh  deploy.sh  result.sh
contract/community/src/: lib.rs
contract/content/: Cargo.toml
contract/ft/: Cargo.toml
contract/ft/src/: lib.rs
contract/governance/: Cargo.toml
contract/governance/contents/: Cargo.toml
contract/governance/src/: lib.rs
contract/governance/src/community/: mod.rs
contract/governance/vote/: Cargo.toml
contract/governance/vote/src/: lib.rs
contract/governance/vote/src/vote/: mod.rs
contract/kickoffer/src/: lib.rs
contract/neardev/: dev-account  dev-account.env
contract/nft/: Cargo.toml
contract/script/: addAccont.sh  callMethod.sh
contract/test-contract-defi/: Cargo.toml
contract/vote/src/: lib.rs
contract/voteController/src/: lib.rs  vote_ext.rs
