[package]
name = "hello_near"
version = "1.0.0"
authors = ["Near Inc <hello@near.org>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-contract-standards = "4.1.1"
near-sdk = "4.0.0"
schemars = "0.8.12"
uint = { version = "0.9.3", default-features = false }

[dev-dependencies]
fungible-token = { path = "./ft" }
defi = { path = "./test-contract-defi" }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = ["ft","test-contract-defi"]
